; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/sn/pci/pcibr/extr_pcibr_provider.c_pcibr_force_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/sn/pci/pcibr/extr_pcibr_provider.c_pcibr_force_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sn_irq_info = type { i32, i64, i32 }
%struct.pcidev_info = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }
%struct.pcibus_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pcibr_force_interrupt(%struct.sn_irq_info* %0) #0 {
  %2 = alloca %struct.sn_irq_info*, align 8
  %3 = alloca %struct.pcidev_info*, align 8
  %4 = alloca %struct.pcibus_info*, align 8
  %5 = alloca i32, align 4
  store %struct.sn_irq_info* %0, %struct.sn_irq_info** %2, align 8
  %6 = load %struct.sn_irq_info*, %struct.sn_irq_info** %2, align 8
  %7 = getelementptr inbounds %struct.sn_irq_info, %struct.sn_irq_info* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  store i32 %8, i32* %5, align 4
  %9 = load %struct.sn_irq_info*, %struct.sn_irq_info** %2, align 8
  %10 = getelementptr inbounds %struct.sn_irq_info, %struct.sn_irq_info* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 8
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %1
  br label %31

14:                                               ; preds = %1
  %15 = load %struct.sn_irq_info*, %struct.sn_irq_info** %2, align 8
  %16 = getelementptr inbounds %struct.sn_irq_info, %struct.sn_irq_info* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = inttoptr i64 %17 to %struct.pcidev_info*
  store %struct.pcidev_info* %18, %struct.pcidev_info** %3, align 8
  %19 = load %struct.pcidev_info*, %struct.pcidev_info** %3, align 8
  %20 = icmp ne %struct.pcidev_info* %19, null
  br i1 %20, label %21, label %31

21:                                               ; preds = %14
  %22 = load %struct.pcidev_info*, %struct.pcidev_info** %3, align 8
  %23 = getelementptr inbounds %struct.pcidev_info, %struct.pcidev_info* %22, i32 0, i32 0
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = inttoptr i64 %26 to %struct.pcibus_info*
  store %struct.pcibus_info* %27, %struct.pcibus_info** %4, align 8
  %28 = load %struct.pcibus_info*, %struct.pcibus_info** %4, align 8
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @pcireg_force_intr_set(%struct.pcibus_info* %28, i32 %29)
  br label %31

31:                                               ; preds = %13, %21, %14
  ret void
}

declare dso_local i32 @pcireg_force_intr_set(%struct.pcibus_info*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
